--- a/.github/workflows/python-sast.yml
+++ b/.github/workflows/python-sast.yml
@@ -16,8 +16,8 @@ jobs:
           python-version: '3.8'
           architecture: 'x64'
       - name: Install requirements
-      run: |
+      - run: |
             python -m pip install --upgrade pip
             pip install flake8
       - name: Check flake8
-      run: flake8 . --show-source --statistics --count --ignore=E501
+      - run: flake8 . --show-source --statistics --count --ignore=E501
