--- a/.github/workflows/python-sast.yml
+++ b/.github/workflows/python-sast.yml
@@ -19,5 +19,4 @@ jobs:
       - run: |
             python -m pip install --upgrade pip
             pip install flake8
-      - name: Check flake8
-      - run: flake8 . --show-source --statistics --count --ignore=E501
+            flake8 . --show-source --statistics --count --ignore=E501
